backtrace of a stack with a promise object (made by `delay') in it.
** Make `accept' leave guile mode while blocking
** `scm_c_read ()' and `scm_c_write ()' now type-check their port argument
** Fixed a build problem on AIX (use of func_data identifier)
** Fixed a segmentation fault which occurred when hashx-ref or hashx-set! was
called with an associator proc that returns neither a pair nor #f.

* New modules (see the manual for details)

** `(srfi srfi-69)'

* Changes to the distribution

** Corrected a few files that referred incorrectly to the old GPL + special exception licence

In fact Guile since 1.8.0 has been licensed with the GNU Lesser
General Public License, and the few incorrect files have now been
fixed to agree with the rest of the Guile distribution.

** Removed unnecessary extra copies of COPYING*

The distribution now contains a single COPYING.LESSER at its top level.


Changes in 1.8.3 (since 1.8.2)

* New modules (see the manual for details)

** `(srfi srfi-35)'
** `(srfi srfi-37)'

* Bugs fixed

** The `(ice-9 slib)' module now works as expected
** Expressions like "(set! 'x #t)" no longer yield a crash
** Warnings about duplicate bindings now go to stderr
** A memory leak in `make-socket-address' was fixed
** Alignment issues (e.g., on SPARC) in network routines were fixed
** A threading issue that showed up at least on NetBSD was fixed
** Build problems on Solaris and IRIX fixed

* Implementation improvements

** The reader is now faster, which reduces startup time
** Procedures returned by `record-accessor' and `record-modifier' are faster


Changes in 1.8.2 (since 1.8.1):

* New procedures (see the manual for details)

** set-program-arguments
** make-vtable

* Incompatible changes

** The body of a top-level `define' no longer sees the binding being created

In a top-level `define', the binding being created is no longer visible
from the `define' body.  This breaks code like