@@ -17,6 +17,7 @@ backtrace of a stack with a promise object (made by `delay') in it.
 ** Fixed a build problem on AIX (use of func_data identifier)
 ** Fixed a segmentation fault which occurred when hashx-ref or hashx-set! was
 called with an associator proc that returns neither a pair nor #f.
+** Secondary threads now always return a valid module for (current-module).
 
 * New modules (see the manual for details)
 
